# flin

./: Cargo.toml  README.md  flin-c590a51431060306.js  index.html
.github/workflows/: rust.yml
assets/: sw.js
cli/: Cargo.toml
cli/src/: main.rs
common/: cargo.toml
common/src/: lib.rs
gui/: Cargo.toml
gui/src/: app.rs  main.rs
src/: app.rs  lib.rs  main.rs
