[workspace]
members = ["common", "cli", "gui"]


[workspace.dependencies]
rand = { version = "0.8.5", default-features = false, features = [
  "std",
  "std_rng",
] }
log = "0.4.19"
simple_logger = "4.2.0"
serde = { version = "1", features = ["derive"] }

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[patch.crates-io]
