[package]
name = "flin"
version = "0.1.0"
authors = ["Moritz Baron  <r.fuzzo@gmail.com>"]
edition = "2021"

[dependencies]


rand = { version = "0.8.5", default-features = false, features = [
  "std",
  "std_rng",
] }
log = "0.4.19"
simple_logger = "4.2.0"
serde = { version = "1", features = ["derive"] }

egui = "0.22"
eframe = { version = "0.22", default-features = false, features = [
  "default_fonts", # Embed the default egui fonts.
  "glow",          # Use the glow rendering backend. Alternative: "glow".
  "persistence",   # Enable restoring app state when restarting the app.
] }
egui-notify = "0.7.0"

# You only need serde if you want app persistence:


image = { version = "0.24.6", default-features = false, features = ["jpeg"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[patch.crates-io]
