[package]
name = "flin_gui"
version = "0.1.0"
authors = ["Moritz Baron  <r.fuzzo@gmail.com>"]
edition = "2021"
rust-version = "1.69"


[dependencies]
common = { path = "../common" }

log = { workspace = true }
simple_logger = { workspace = true }

egui = "0.22"
eframe = { version = "0.22", default-features = false, features = [
  "default_fonts", # Embed the default egui fonts.
  "wgpu",          # Use the glow rendering backend. Alternative: "glow".
  "persistence",   # Enable restoring app state when restarting the app.
] }
egui_dnd = "0.4"

# You only need serde if you want app persistence:
serde = { workspace = true }

image = { version = "0.24.6", default-features = false, features = ["jpeg"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"
